--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -1,7 +1,7 @@
 .main{
     min-height: 400px;
     min-height: calc(100vh - 288px);
-    padding: 16px;
+    padding: 16px 16px 90px 16px;
 }
 .sidenav{
     width: 250px;
