--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,64 +1,51 @@
-<app-main-carousel [slides]="slides"></app-main-carousel> 
-<div fxLayout="row wrap" class="info-bar">
-    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="50">
-        <mat-card class="light-block" fxLayout="row"  fxLayoutAlign="start center">
-            <mat-icon class="mat-icon-xlg text-muted m-0">card_giftcard</mat-icon>
-            <div class="content">
-                <p>BONUS PLUS</p> 
-                <span class="text-muted m-0">Make fun of shopping and collect bonuses</span>
-            </div> 
-        </mat-card> 
-    </div>
-    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="50"> 
-        <mat-card class="light-block" fxLayout="row"  fxLayoutAlign="start center">
-            <mat-icon class="mat-icon-xlg text-muted m-0">local_shipping</mat-icon>
-            <div class="content">
-                <p>FREE SHIPPING</p> 
-                <span class="text-muted m-0">Free shipping on all orders over $99</span>
-            </div> 
+<app-main-carousel [slides]="slides"></app-main-carousel>
+<div fxLayout="row" class="info-bar">
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+        <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
+            <button mat-fab color="primary">
+                <mat-icon>list</mat-icon>
+            </button>
+            <p>All Categories</p>
         </mat-card>
     </div>
-    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="50"> 
-        <mat-card class="light-block" fxLayout="row"  fxLayoutAlign="start center">
-            <mat-icon class="mat-icon-xlg text-muted m-0">monetization_on</mat-icon>
-            <div class="content">
-                <p>MONEY BACK GUARANTEE</p> 
-                <span class="text-muted m-0">30 Days money return guarantee</span>
-            </div> 
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+        <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
+            <button mat-fab color="warn">
+                <mat-icon>euro_symbol</mat-icon>
+            </button>
+            <p>Request Quotation</p>
         </mat-card>
     </div>
-    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="50"> 
-        <mat-card class="light-block" fxLayout="row"  fxLayoutAlign="start center">
-            <mat-icon class="mat-icon-xlg text-muted m-0">history</mat-icon>
-            <div class="content">
-                <p>ONLINE SUPPORT 24/7</p> 
-                <span class="text-muted m-0">Call us: (+100) 123 456 7890</span>
-            </div> 
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+        <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
+            <button mat-fab color="accent">
+                <mat-icon>attach_money</mat-icon>
+            </button>
+            <p>Trade Assurance</p>
+        </mat-card>
+    </div>
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+        <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
+            <button mat-fab color="primary">
+                <mat-icon>navigation</mat-icon>
+            </button>
+            <p>New User</p>
         </mat-card>
     </div>
 </div>
 
-<app-banners [banners]="banners"></app-banners>
-
-<div class="products-tabs">  
-
-    <mat-tab-group mat-stretch-tabs (selectedTabChange)="onLinkClick($event)">
-       
-        <mat-tab label="Featured">           
-           <app-products-carousel [products]="featuredProducts"></app-products-carousel>
-        </mat-tab>
-        <mat-tab label="On Sale">
-           <app-products-carousel [products]="onSaleProducts"></app-products-carousel>
-        </mat-tab>
-        <mat-tab label="Top Rated">
-            <app-products-carousel [products]="topRatedProducts"></app-products-carousel>
-        </mat-tab>
-        <mat-tab label="New Arrivals">
-            <app-products-carousel [products]="newArrivalsProducts"></app-products-carousel>
-        </mat-tab>
-    </mat-tab-group> 
-
-
+<div class="products-tabs">
+    <h3 class="product-section-title">SELECTED PRODUCTS</h3>
+    <app-products-carousel [products]="featuredProducts"></app-products-carousel>
+    <app-products-carousel [products]="onSaleProducts"></app-products-carousel>
+    <app-products-carousel [products]="topRatedProducts"></app-products-carousel>
+    <app-products-carousel [products]="newArrivalsProducts"></app-products-carousel>
 </div>
 
-<!--<app-brands-carousel [brands]="brands"></app-brands-carousel> -->
+<div class="products-tabs">
+    <h3 class="product-section-title">ELECTRONICS ITEMS</h3>
+    <app-products-carousel [products]="featuredProducts"></app-products-carousel>
+    <app-products-carousel [products]="onSaleProducts"></app-products-carousel>
+    <app-products-carousel [products]="topRatedProducts"></app-products-carousel>
+    <app-products-carousel [products]="newArrivalsProducts"></app-products-carousel>
+</div>
