--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,13 +1,13 @@
-<mat-sidenav-container> 
+<mat-sidenav-container>
 
     <mat-sidenav [opened]="false" mode="over" #sidenav class="sidenav mat-elevation-z6">
         <button mat-icon-button color="warn" class="close" (click)="sidenav.close()">
-           <mat-icon color="warn">close</mat-icon>
+            <mat-icon color="warn">close</mat-icon>
         </button>
         <div class="divider"></div>
         <app-sidenav-menu [menuItems]="sidenavMenuItems" [menuParentId]="0"></app-sidenav-menu>
         <div class="divider"></div>
-        <!--<div class="text-center py-2">                   
+        <!--<div class="text-center py-2">
             <svg class="social-icon" viewBox="0 0 24 24">
                 <path d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1 19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M18,5H15.5A3.5,3.5 0 0,0 12,8.5V11H10V14H12V21H15V14H18V11H15V9A1,1 0 0,1 16,8H18V5Z" />
             </svg>
@@ -26,30 +26,33 @@
             <span fxHide="false" fxHide.gt-sm>
                 <button mat-button (click)="sidenav.toggle()" class="sidenav-toggle">
                     <mat-icon>menu</mat-icon>
-                </button> 
+                </button>
             </span>
             <span fxShow="false" fxShow.gt-xs fxLayoutAlign="center center"></span>
-            <app-top-menu></app-top-menu>       
+            <app-top-menu></app-top-menu>
         </mat-toolbar-row>
         <mat-toolbar-row fxLayoutAlign="space-between center" class="logo-toolbar theme-container">
             <div fxFlex fxFlexOffset.gt-sm="12">
-                <form method="get"  class="search-form" fxLayout="row">
-                    <!--<button mat-raised-button [matMenuTriggerFor]="categoriesMenu" #categoriesMenuTrigger="matMenuTrigger" type="button" class="mat-elevation-z0 categories text-truncate text-muted">{{category?.name}}<mat-icon>arrow_drop_down</mat-icon></button>-->
-                    <!--<mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
+                <form method="get" class="search-form" fxLayout="row">
+                    <!-- <mat-icon>camera_alt</mat-icon>     -->
+                    <button mat-raised-button type="button" class="mat-elevation-z0 scanner">
+                        <mat-icon>center_focus_weak</mat-icon>
+                    </button>
+                    <!-- <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
                         <span (mouseleave)="categoriesMenuTrigger.closeMenu()">
                             <app-category-list [categories]="categories" [categoryParentId]="0" (change)="changeCategory($event)"></app-category-list>
                         </span>
-                    </mat-menu>-->
+                    </mat-menu> -->
                     <input type="text" placeholder="Type to search..." fxFlex>
                     <button mat-mini-fab (click)="search()" type="button" class="search-btn mat-elevation-z0 text-muted">
-                        <mat-icon>search</mat-icon>
-                    </button> 
+                        <mat-icon>camera_alt</mat-icon>
+                    </button>
                 </form>
             </div>
-          
-           
 
-            <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">                
+
+
+            <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
 
                 <!--<div fxLayoutAlign="center center">
                     <button mat-button [matMenuTriggerFor]="cartMenu" #cartMenuTrigger="matMenuTrigger" class="flex-row-button">
@@ -57,7 +60,7 @@
                         <span *ngIf="appService.Data.totalCartCount > 0" class="cart-items-count">{{appService.Data.totalCartCount}}</span>
                         <div fxLayout="column" fxLayoutAlign="center center" fxShow="false" fxShow.gt-xs class="top-cart">
                             <span>Shopping Cart</span>
-                            <span *ngIf="appService.Data.totalCartCount > 0">{{appService.Data.totalCartCount}} item<span *ngIf="appService.Data.totalCartCount > 1">s</span> - 
+                            <span *ngIf="appService.Data.totalCartCount > 0">{{appService.Data.totalCartCount}} item<span *ngIf="appService.Data.totalCartCount > 1">s</span> -
                                 $<span>{{appService.Data.totalPrice | number : '1.2-2'}}</span>
                             </span>
                         </div>
@@ -72,7 +75,7 @@
                             <div class="divider mt-1"></div>
                             <div *ngIf="appService.Data.totalCartCount == 0" class="py-1 text-muted text-center">You have no items in your shopping cart.</div>
                             <mat-list>
-                                <mat-list-item *ngFor="let product of appService.Data.cartList">                                   
+                                <mat-list-item *ngFor="let product of appService.Data.cartList">
                                     <h3 matLine class="text-muted"> {{product.name}} </h3>
                                     <p matLine class="text-muted">
                                         <span> {{product.cartCount}} x ${{product.newPrice | number : '1.2-2'}} </span>
@@ -103,7 +106,7 @@
                     </mat-menu>
                 </div>-->
 
-                <!--<div fxLayoutAlign="center center" fxHide="false" fxHide.gt-sm> 
+                <!--<div fxLayoutAlign="center center" fxHide="false" fxHide.gt-sm>
                     <button mat-icon-button [matMenuTriggerFor]="searchMenu" #searchMenuTrigger="matMenuTrigger" class="search-toggle-btn">
                         <mat-icon class="mat-icon-lg">search</mat-icon>
                     </button>
@@ -118,25 +121,25 @@
                             <input type="text" placeholder="Type to search..." fxFlex (click)="stopClickPropagate($event)">
                             <button mat-mini-fab (click)="search()" type="button" class="search-btn mat-elevation-z0 text-muted">
                                 <mat-icon>search</mat-icon>
-                            </button> 
+                            </button>
                         </form>
                     </mat-menu>
                 </div>-->
             </div>
-            
+
         </mat-toolbar-row>
-    </mat-toolbar> 
+    </mat-toolbar>
 
 
- 
-    <app-menu fxShow="false" fxShow.gt-sm></app-menu>  
 
-    
-    <div class="theme-container main"> 
+    <app-menu fxShow="false" fxShow.gt-sm></app-menu>
+
+
+    <div class="theme-container main">
         <app-breadcrumb></app-breadcrumb>
         <router-outlet></router-outlet>
     </div>
-    
+
 
     <!--<app-options></app-options>-->
 
@@ -147,4 +150,4 @@
     </div>
 
 
- </mat-sidenav-container>
+</mat-sidenav-container>
