--- a/src/app/theme/components/breadcrumb/breadcrumb.component.scss
+++ b/src/app/theme/components/breadcrumb/breadcrumb.component.scss
@@ -14,6 +14,9 @@
         padding: 0 6px;
         opacity: 0.7;
     }
+    .breadcrumb-title{
+        padding-left: 10px;
+    }
     .breadcrumb-title.active{
         text-transform: uppercase;
     }
