--- a/src/app/pages/sellers/landing/landing.component.html
+++ b/src/app/pages/sellers/landing/landing.component.html
@@ -1,11 +1,178 @@
-<div class="card" style="width: 18rem;">
-    <div class="card-header">
-      Featured
+<div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+  <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+    <mat-card class="example-card" [ngStyle]="{'background-color':'#baebff'}">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image">
+          <mat-icon class="mat-icon-lg text-muted m-0">insert_chart_outlined</mat-icon>
+        </div>
+        <mat-card-title>Market</mat-card-title>
+        <mat-card-subtitle>Current Market</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <table>
+          <thead>
+            <tr>
+              <th>Description</th>
+              <th>Price</th>
+            </tr>
+          </thead>
+          <tr>
+            <td>Gold</td>
+            <td>$ 100.00</td>
+          </tr>
+          <tr>
+            <td>Steel</td>
+            <td>$ 85.00</td>
+          </tr>
+          <tr>
+            <td>Petrol</td>
+            <td>$ 65.00</td>
+          </tr>
+          <tr>
+            <td>Rice</td>
+            <td>$ 50.00</td>
+          </tr>
+        </table>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+    <mat-card class="example-card" [ngStyle]="{'background-color':'#fff244'}">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image">
+          <mat-icon class="mat-icon-lg text-muted m-0">star_border</mat-icon>
+        </div>
+        <mat-card-title>Interest</mat-card-title>
+        <mat-card-subtitle>Rating</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <table>
+          <thead>
+            <tr>
+              <th>Rating</th>
+              <th>No.</th>
+            </tr>
+          </thead>
+          <tr>
+            <td>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+            </td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+            </td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <td>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+            </td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+            </td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>
+              <mat-icon class="mat-icon-xs text-muted m-0">star_border</mat-icon>
+            </td>
+            <td>3</td>
+          </tr>
+        </table>
+      </mat-card-content>
+    </mat-card>
+  </div>
+  <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+    <mat-card class="example-card" [ngStyle]="{'background-color':'#20d620'}">
+      <mat-card-header>
+        <div mat-card-avatar class="example-header-image">
+          <mat-icon class="mat-icon-lg text-muted m-0">visibility</mat-icon>
+        </div>
+        <mat-card-title>Visitor</mat-card-title>
+        <mat-card-subtitle>Current Visitors</mat-card-subtitle>
+      </mat-card-header>
+      <mat-card-content>
+        <table>
+          <thead>
+            <tr>
+              <th>Country</th>
+              <th>No.</th>
+            </tr>
+          </thead>
+          <tr>
+            <td>India</td>
+            <td>8</td>
+          </tr>
+          <tr>
+            <td>Australia</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>China</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Germany</td>
+            <td>2</td>
+          </tr>
+        </table>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</div>
+
+<div class="products-tabs">
+  <h3 class="product-section-title">PROMOTION</h3>
+  <div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+      <mat-card class="example-card">
+        <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+      </mat-card>
     </div>
-    <div class="card-body">
-      <h5 class="card-title">Special title treatment</h5>
-      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+      <mat-card class="example-card">
+        <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+      </mat-card>
+    </div>
+    <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+      <mat-card class="example-card">
+        <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+      </mat-card>
     </div>
   </div>
-  
+</div>
+<div class="products-tabs">
+  <h3 class="product-section-title">PRODUCT</h3>
+<div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+  <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+    </mat-card>
+  </div>
+  <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+    </mat-card>
+  </div>
+  <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
+    <mat-card class="example-card">
+      <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+    </mat-card>
+  </div>
+</div>
+</div>
