--- a/src/app/pages/sellers/sellers.component.html
+++ b/src/app/pages/sellers/sellers.component.html
@@ -20,7 +20,9 @@
         </mat-toolbar-row>
     </mat-toolbar>
 
-    <div class="theme-container main">
+    <app-seller-menu fxShow="false" fxShow.gt-sm></app-seller-menu>
+
+    <div class="theme-container main"> 
         <app-breadcrumb></app-breadcrumb>
         <router-outlet></router-outlet>
     </div>
