--- a/src/app/pages/sellers/landing/landing.component.html
+++ b/src/app/pages/sellers/landing/landing.component.html
@@ -137,33 +137,33 @@
 </div>
 
 <div class="products-tabs">
-  <div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
-    <div fxFlex="100" fxFlex.gt-md="50" fxFlex.gt-xs="50">
+  <div fxLayout="row wrap" fxLayoutAlign="space-between top">
+    <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
       <h3 class="product-section-title">PROMOTION</h3>
-      <div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
-        <div fxFlex="100" fxFlex.gt-md="50" fxFlex.gt-xs="50">
+      <div fxLayout="row wrap" fxLayoutAlign="space-between top">
+        <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
           <mat-card class="example-card">
             <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
           </mat-card>
         </div>
-        <div fxFlex="100" fxFlex.gt-md="50" fxFlex.gt-xs="50">
+        <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
           <mat-card class="example-card">
-            <img mat-card-image src="assets/images/carousel/42be963d0f43d62e.jpg">
+            <img mat-card-image src="assets/images/carousel/0ef3451a2daeca56.jpg">
           </mat-card>
         </div>
       </div>
     </div>
-    <div fxFlex="100" fxFlex.gt-md="50" fxFlex.gt-xs="50">
+    <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
       <h3 class="product-section-title">PRODUCT</h3>
-      <div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
-        <div fxFlex="100" fxFlex.gt-md="50" fxFlex.gt-xs="50">
+      <div fxLayout="row wrap" fxLayoutAlign="space-between top">
+        <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
           <mat-card class="example-card">
-            <img mat-card-image src="assets/images/carousel/0ef3451a2daeca56.jpg">
+<img mat-card-image src="assets/images/products/pc/3-small.png">
           </mat-card>
         </div>
-        <div fxFlex="100" fxFlex.gt-md="50" fxFlex.gt-xs="50">
+        <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
           <mat-card class="example-card">
-            <img mat-card-image src="assets/images/carousel/0ef3451a2daeca56.jpg">
+<img mat-card-image src="assets/images/products/pc/1-small.png">
           </mat-card>
         </div>
       </div>
