--- a/src/app/pages/sellers/landing/landing.component.html
+++ b/src/app/pages/sellers/landing/landing.component.html
@@ -139,7 +139,7 @@
 <div class="products-tabs">
   <div fxLayout="row wrap" fxLayoutAlign="space-between top">
     <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
-      <h3 class="product-section-title">PROMOTION</h3>
+      <h3 class="product-section-title">PROMOTIONS</h3>
       <div fxLayout="row wrap" fxLayoutAlign="space-between top">
         <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
           <mat-card class="example-card">
@@ -154,7 +154,7 @@
       </div>
     </div>
     <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
-      <h3 class="product-section-title">PRODUCT</h3>
+      <h3 class="product-section-title">PRODUCTS</h3>
       <div fxLayout="row wrap" fxLayoutAlign="space-between top">
         <div fxFlex="100" fxFlex.gt-md="49" fxFlex.gt-xs="49">
           <mat-card class="example-card">
