--- a/src/app/theme/components/top-menu/top-menu.component.html
+++ b/src/app/theme/components/top-menu/top-menu.component.html
@@ -1,5 +1,5 @@
 <div class="top-menu">    
-
+    <a [routerLink]="['/seller']">Go to Seller Page</a>
     <a mat-button [matMenuTriggerFor]="currencyMenu" #currencyMenuTrigger="matMenuTrigger">
         {{currency}}<mat-icon class="mat-icon-sm caret">arrow_drop_down</mat-icon>
     </a>
