--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -34,15 +34,18 @@
         <mat-toolbar-row fxLayoutAlign="space-between center" class="logo-toolbar theme-container">
             <div fxFlex fxFlexOffset.gt-sm="12">
                 <form method="get" class="search-form" fxLayout="row">
-                    <!-- <mat-icon>camera_alt</mat-icon>     -->
                     <button mat-raised-button type="button" class="mat-elevation-z0 scanner">
                         <mat-icon>center_focus_weak</mat-icon>
                     </button>
-                    <!-- <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
+                    <button mat-raised-button [matMenuTriggerFor]="categoriesMenu" #categoriesMenuTrigger="matMenuTrigger"
+                        type="button" class="mat-elevation-z0 categories text-truncate">
+                        Products
+                    </button>
+                    <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
                         <span (mouseleave)="categoriesMenuTrigger.closeMenu()">
                             <app-category-list [categories]="categories" [categoryParentId]="0" (change)="changeCategory($event)"></app-category-list>
                         </span>
-                    </mat-menu> -->
+                    </mat-menu>
                     <input type="text" placeholder="Type to search..." fxFlex>
                     <button mat-mini-fab (click)="search()" type="button" class="search-btn mat-elevation-z0 text-muted">
                         <mat-icon>camera_alt</mat-icon>
