working on account

--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -55,9 +55,9 @@
 
 
 
-            <div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
+            <!--<div fxFlexOffset="10" fxLayout="row" fxLayoutAlign="center center">
 
-                <!--<div fxLayoutAlign="center center">
+                <div fxLayoutAlign="center center">
                     <button mat-button [matMenuTriggerFor]="cartMenu" #cartMenuTrigger="matMenuTrigger" class="flex-row-button">
                         <mat-icon class="mat-icon-lg">shopping_cart</mat-icon>
                         <span *ngIf="appService.Data.totalCartCount > 0" class="cart-items-count">{{appService.Data.totalCartCount}}</span>
@@ -109,7 +109,7 @@
                     </mat-menu>
                 </div>-->
 
-                <!--<div fxLayoutAlign="center center" fxHide="false" fxHide.gt-sm>
+            <!--<div fxLayoutAlign="center center" fxHide="false" fxHide.gt-sm>
                     <button mat-icon-button [matMenuTriggerFor]="searchMenu" #searchMenuTrigger="matMenuTrigger" class="search-toggle-btn">
                         <mat-icon class="mat-icon-lg">search</mat-icon>
                     </button>
@@ -127,8 +127,8 @@
                             </button>
                         </form>
                     </mat-menu>
-                </div>-->
-            </div>
+                </div>
+</div>-->
 
         </mat-toolbar-row>
     </mat-toolbar>
