--- a/src/app/pages/pages.component.scss
+++ b/src/app/pages/pages.component.scss
@@ -1,8 +1,8 @@
-.main{
-    min-height: 400px;
-    min-height: calc(100vh - 288px);
-    padding: 16px 16px 90px 16px;
-}
+// .main{
+//     min-height: 400px;
+//     min-height: calc(100vh - 288px);
+//     padding: 16px 16px 90px 16px;
+// }
 .sidenav{
     width: 250px;
     padding: 8px 16px;
