--- a/src/app/pages/sellers/landing/landing.component.css
+++ b/src/app/pages/sellers/landing/landing.component.css
@@ -16,3 +16,17 @@ table th:last-child {
 {
     margin-bottom: 20px;
 }
+
+.mat-expansion-panel-header strong{
+    padding-left: 10px;
+}
+
+.counter-extend
+{
+    display: inline-block;
+}
+
+.counter-extend .counter
+{
+    font-size: 50px;
+}
