--- a/src/app/pages/sellers/sellers.component.html
+++ b/src/app/pages/sellers/sellers.component.html
@@ -27,7 +27,7 @@
                     </button>
                     <button mat-raised-button [matMenuTriggerFor]="categoriesMenu" #categoriesMenuTrigger="matMenuTrigger"
                         type="button" class="mat-elevation-z0 categories text-truncate">
-                        Products
+                        Products<mat-icon>arrow_drop_down</mat-icon>
                     </button>
                     <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
                         <span (mouseleave)="categoriesMenuTrigger.closeMenu()">
