--- a/src/app/pages/products/product/product.component.html
+++ b/src/app/pages/products/product/product.component.html
@@ -233,11 +233,11 @@
         <img src="https://via.placeholder.com/400x310/EEEEEE/9E9E9E/?text=Banner%203" alt="" class="mw-100 d-block mt-3">
     </div>
 </div>
-
+<!--
 <div class="py-2 mt-2">
     <h2>Related Products</h2>
     <div class="divider"></div>
     <app-products-carousel [products]="relatedProducts"></app-products-carousel>
-</div>
+</div>-->
 
 
