--- a/src/app/theme/components/top-menu/top-menu.component.html
+++ b/src/app/theme/components/top-menu/top-menu.component.html
@@ -1,5 +1,4 @@
 <div class="top-menu">    
-    <a [routerLink]="['/seller']">Go to Seller Page</a>
     <a mat-button [matMenuTriggerFor]="currencyMenu" #currencyMenuTrigger="matMenuTrigger">
         {{currency}}<mat-icon class="mat-icon-sm caret">arrow_drop_down</mat-icon>
     </a>
@@ -28,11 +27,15 @@
         <a mat-button routerLink="/compare">Compare  ({{appService.Data.compareList.length}})</a>
         <a mat-button routerLink="/wishlist">Wishlist ({{appService.Data.wishList.length}})</a>
     </span>-->  
-
-    <a mat-button [matMenuTriggerFor]="accountMenu" #accountMenuTrigger="matMenuTrigger">
+    <a mat-button [routerLink]="['/sign-in']" *ngIf="showSignIn">
+        <i class="material-icons">
+            power_settings_new
+            </i>
+    </a>
+    <a mat-button [matMenuTriggerFor]="accountMenu" #accountMenuTrigger="matMenuTrigger" *ngIf="!showSignIn">
         <mat-icon class="mat-icon-sm account-icon">person</mat-icon> <span fxShow="false" fxShow.gt-sm>account</span> <mat-icon class="mat-icon-sm caret">arrow_drop_down</mat-icon>
     </a>
-    <mat-menu #accountMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="app-dropdown account">
+    <mat-menu #accountMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="app-dropdown account" *ngIf="!showSignIn">
         <span (mouseleave)="accountMenuTrigger.closeMenu()">
             <div fxLayout="row" fxLayoutAlign="space-around center" class="user-info">                   
                 <img src="assets/images/others/user.jpg" alt="user-image" width="50">
