alignment and design fix

--- a/src/app/pages/sellers/landing/landing.component.html
+++ b/src/app/pages/sellers/landing/landing.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="row wrap" fxLayoutAlign="space-evenly top">
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-expansion-panel class="example-expansion" [ngStyle]="{'background-color':'#b9bab6'}">
+<mat-expansion-panel class="example-expansion" [ngStyle]="{'background-color':'#e8e8e8'}">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mat-icon-md m-0">insert_chart_outlined</mat-icon> <strong>Market</strong>
@@ -33,7 +33,7 @@
     </mat-expansion-panel>
   </div>
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-expansion-panel class="example-expansion" [ngStyle]="{'background-color':'#b9bab6'}">
+<mat-expansion-panel class="example-expansion" [ngStyle]="{'background-color':'#e8e8e8'}">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mat-icon-md m-0">star_border</mat-icon> <strong>Interest</strong>
@@ -90,7 +90,7 @@
     </mat-expansion-panel>
   </div>
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-expansion-panel class="example-expansion" [ngStyle]="{'background-color':'#b9bab6'}">
+<mat-expansion-panel class="example-expansion" [ngStyle]="{'background-color':'#e8e8e8'}">
       <mat-expansion-panel-header>
         <mat-panel-title>
           <mat-icon class="mat-icon-md m-0">visibility</mat-icon> <strong>Visitor</strong>
@@ -124,18 +124,18 @@
   </div>
 </div>
 
-<div fxLayout="row">
-<div fxFlex="100" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxLayoutAlign="center top" class="counter-extend">
+<div fxLayout="row" fxLayoutAlign="center top">
+<div fxFlex="100" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxLayout="column" fxLayoutAlign="center top" class="counter-extend">
     <p class="counter">0</p>
     <p class="title">RFQ</p>
   </div>
-<div fxFlex="100" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxLayoutAlign="center top" class="counter-extend">
-    <p class="counter">0</p>
-    <p class="title">RFQ</p>
+<div fxFlex="100" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxLayout="column" fxLayoutAlign="center top" class="counter-extend">
+    <p class="counter">10</p>
+    <p class="title">My Quotes</p>
   </div>
-<div fxFlex="100" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxLayoutAlign="center top" class="counter-extend">
-    <p class="counter">0</p>
-    <p class="title">RFQ</p>
+<div fxFlex="100" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxLayout="column" fxLayoutAlign="center top" class="counter-extend">
+    <p class="counter">20</p>
+    <p class="title">Messages</p>
   </div>
 </div>
 
