--- a/src/app/theme/styles/_base.scss
+++ b/src/app/theme/styles/_base.scss
@@ -538,7 +538,7 @@ button.swipe-arrow{
         width: 160px;
     }
     .search-form .categories{
-        width: 100px;
+        // width: 100px;
     }
 
 }
