--- a/src/app/pages/sellers/landing/landing.component.css
+++ b/src/app/pages/sellers/landing/landing.component.css
@@ -23,10 +23,20 @@ table th:last-child {
 
 .counter-extend
 {
-    display: inline-block;
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .counter-extend .counter
 {
     font-size: 50px;
+}
+
+.counter-extend .title{
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.counter-extend p{
+    margin: 0;
 }
