--- a/src/app/pages/sellers/sellers.component.html
+++ b/src/app/pages/sellers/sellers.component.html
@@ -19,15 +19,15 @@
             <app-top-menu></app-top-menu>
         </mat-toolbar-row>
         <mat-toolbar-row fxLayoutAlign="space-between center" class="logo-toolbar theme-container">
+            <img src="assets/images/others/logo.png" style="height: 80px;" />
             <div fxFlex fxFlexOffset.gt-sm="12">
                 <form method="get" class="search-form" fxLayout="row">
-                    <!-- <img src="assets/images/others/logo.png" style="height: 80px;" /> -->
                     <button mat-raised-button type="button" class="mat-elevation-z0 scanner">
                         <mat-icon>center_focus_weak</mat-icon>
                     </button>
                     <button mat-raised-button [matMenuTriggerFor]="categoriesMenu" #categoriesMenuTrigger="matMenuTrigger"
                         type="button" class="mat-elevation-z0 categories text-truncate">
-                        Products<mat-icon>arrow_drop_down</mat-icon>
+                        <mat-icon>menu</mat-icon>
                     </button>
                     <mat-menu #categoriesMenu="matMenu" [overlapTrigger]="false" xPosition="before" class="categories-dropdown">
                         <span (mouseleave)="categoriesMenuTrigger.closeMenu()">
