--- a/src/app/pages/sellers/landing/landing.component.html
+++ b/src/app/pages/sellers/landing/landing.component.html
@@ -141,7 +141,7 @@
 
 <div fxLayout="row" class="info-bar">
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+    <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
       <button mat-fab color="primary">
         <mat-icon>list</mat-icon>
       </button>
@@ -149,7 +149,7 @@
     </mat-card>
   </div>
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+<mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
       <button mat-fab color="warn">
         <mat-icon>euro_symbol</mat-icon>
       </button>
@@ -157,7 +157,7 @@
     </mat-card>
   </div>
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+<mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
       <button mat-fab color="accent">
         <mat-icon>attach_money</mat-icon>
       </button>
@@ -165,7 +165,7 @@
     </mat-card>
   </div>
   <div fxFlex="100" fxFlex.gt-md="25" fxFlex.gt-xs="25">
-    <mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly top">
+<mat-card class="no-block" fxLayout="row wrap" fxLayoutAlign="space-evenly center">
       <button mat-fab color="primary">
         <mat-icon>navigation</mat-icon>
       </button>
